Fix constructors that return objects in catch blocks (bug 604381, r=dmandelin).